# napari-cocoutils

./: .pre-commit-config.yaml  MANIFEST.in  README.md  cocoutils-primer.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  task.md
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md  config.yml
docs/: API.md  README.md
examples/: README.md  basic_usage.py
src/napari_cocoutils/: __init__.py  _config.py  _controllers.py  _memory.py  _progress.py  _reader.py  _utils.py  _visualization.py  _widget.py  napari.yaml
tests/: __init__.py  test_controllers.py  test_integration.py  test_performance.py  test_reader.py  test_widget.py
